--- a/apps/app1/templates/index.html
+++ b/apps/app1/templates/index.html
@@ -5,27 +5,175 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
 <!--[if gt IE 8]><!--> 
 <html class="no-js" lang=""> <!--<![endif]-->
-  <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-      <title></title>
-      <meta name="description" content="">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title></title>
+	<meta name="description" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-      <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-      <link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
-      <link rel="stylesheet" href="{% static 'css/main.css' %}">
+	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+	<link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
+	<link rel="stylesheet" href="{% static 'css/main.css' %}">
 
-      <script src="{% static 'js/vendor/modernizr-2.8.3-respond-1.4.2.min.js' %}"></script>
-  </head>
-  <body>
-    <nav class="navbar navbar-default"></nav>
+	<script src="{% static 'js/vendor/modernizr-2.8.3-respond-1.4.2.min.js' %}"></script>
+</head>
+<body>
+	<nav class="navbar navbar-default">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">RJP-Motors</a>
+			</div>
+
+			<div class="collapse navbar-collapse navbar-right" id="menu">
+				<a href="" class=" btn btn-default navbar-btn">Inicio</a>
+				<a href="" class=" btn btn-default navbar-btn">Contacto</a>
+				<a href="" class=" btn btn-default navbar-btn">Motos</a>
+				<a href="" class=" btn btn-default navbar-btn">Repuestos</a>
+				<a href="" class=" btn btn-default navbar-btn">Tienda</a>
+			</div>
+		</div>
+	</nav>
+
+	<div class="container">
+		<div class="row ">
+			<div class="col-sm-6 ">
+				<h3>Esto es un simple subtítulo</h3>  
+
+			</div>
+
+			<div class="col-sm-6 buscador-home" >
+				<div class="input-group">
+					<div class="input-group-btn">
+						<button type="button" class="btn btn-info">Action</button>
+						<button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							<span class="caret"></span>
+							<span class="sr-only">Toggle Dropdown</span>
+						</button>
+						<ul class="dropdown-menu" role="menu">
+							<li><a href="#">Action</a></li>
+							<li><a href="#">Action</a></li>
+							<li><a href="#">Action</a></li>
+							<li><a href="#">Action</a></li>
+						</ul>
+					</div>              
+					<input type="text" class="form-control" placeholder="Encuentre lo que busca" />
+				</div>
+
+			</div>
+		</div>
+	</div>
+
+	<div class="container contenido-home">
+
+		<div class="col-sm-3 ">
+			<div class="form-group">
+				<label for="">Tipo de comida</label>
+				<div class="checkbox">
+					<label for="">
+						<input type="checkbox">Todo
+					</label>
+				</div>
+				<div class="checkbox">
+					<label for="">
+						<input type="checkbox">bbbb
+					</label>
+				</div>
+				<div class="checkbox">
+					<label for="">
+						<input type="checkbox">cccc
+					</label>
+				</div>
+				<div class="checkbox">
+					<label for="">
+						<input type="checkbox">dddd
+					</label>
+				</div>
+				<div class="checkbox">
+					<label for="">
+						<input type="checkbox">eeee
+					</label>
+				</div>
+			</div>
+
+
+			<div class="form-group">
+				<label for="">Formas de pago</label>
+				<div class="checkbox">
+					<label for="">
+						<input type="checkbox">Todo
+					</label>
+				</div>
+				<div class="checkbox">
+					<label for="">
+						<input type="checkbox">bbbb
+					</label>
+				</div>
+				<div class="checkbox">
+					<label for="">
+						<input type="checkbox">cccc
+					</label>
+				</div>
+				<div class="checkbox">
+					<label for="">
+						<input type="checkbox">dddd
+					</label>
+				</div>
+				<div class="checkbox">
+					<label for="">
+						<input type="checkbox">eeee
+					</label>
+				</div>
+			</div>
+		</div>
+
+		<div class="col-sm-9">
+			<div class="list-group">
+				<a href="" class="list-group-item">
+					<div class="col-sm-3">
+						<img src="{% static 'img/icono_ejemplo.png' %}" class="img-rounded media-object img-responsive" alt="image">
+					</div>
+					<div class="col-sm-6">
+						<h3>Titulo</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit nobis dolor deserunt alias sequi cumque inventore ipsam dolorem officiis, </p>
+					</div>
+					<div class="col-sm-3 text-center">
+						<h2>5 <small>tips</small></h2>
+						<button type="button" class="btn btn-primary btn-lg ">Ver detalles</button>
+					</div>
+				</a>
+
+
+				<a href="" class="list-group-item">
+					<div class="col-sm-3">
+						<img src="{% static 'img/icono_ejemplo.png' %}" class="img-rounded media-object img-responsive" alt="image">
+					</div>
+					<div class="col-sm-6">
+						<h3>Titulo</h3>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit nobis dolor deserunt alias sequi cumque inventore ipsam dolorem officiis, </p>
+					</div>
+					<div class="col-sm-3 text-center">
+						<h2>5 <small>tips</small></h2>
+						<button type="button" class="btn btn-primary btn-lg ">Ver detalles</button>
+					</div>
+				</a>
+			</div>
+		</div>
+	</div>
+</div>
+<div class="row">
 
 
 
 
-        <script src="{% static 'js/vendor/jquery-1.11.2.min.js' %}"></script>
-        <script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
-        <script src="{% static 'js/main.js' %}"></script>
-    </body>
+	<script src="{% static 'js/vendor/jquery-1.11.2.min.js' %}"></script>
+	<script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
+	<script src="{% static 'js/main.js' %}"></script>
+</body>
 </html>
