--- a/apps/app1/templates/index.html
+++ b/apps/app1/templates/index.html
@@ -28,7 +28,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#">RJP-Motors</a>
+				<a class="navbar-brand" href="#">.::RJP-Motors::.</a>
 			</div>
 
 			<div class="collapse navbar-collapse navbar-right" id="menu">
