--- a/apps/app1/templates/index.html
+++ b/apps/app1/templates/index.html
@@ -137,7 +137,7 @@
 			<div class="list-group">
 				<a href="" class="list-group-item">
 					<div class="col-sm-3">
-						<img src="{% static 'img/icono_ejemplo.png' %}" class="img-rounded media-object img-responsive" alt="image">
+						<img src="{% static 'img/image01.jpg' %}" class="img-rounded media-object img-responsive" alt="image">
 					</div>
 					<div class="col-sm-6">
 						<h3>Titulo</h3>
@@ -152,7 +152,7 @@
 
 				<a href="" class="list-group-item">
 					<div class="col-sm-3">
-						<img src="{% static 'img/icono_ejemplo.png' %}" class="img-rounded media-object img-responsive" alt="image">
+						<img src="{% static 'img/image02.jpg' %}" class="img-rounded media-object img-responsive" alt="image">
 					</div>
 					<div class="col-sm-6">
 						<h3>Titulo</h3>
