--- a/apps/app1/templates/index.html
+++ b/apps/app1/templates/index.html
@@ -33,14 +33,13 @@
 				</button>
 				<a class="navbar-brand" href="#">.::RJP-Motors::.</a>
 			</div>
-
-			<div class="collapse navbar-collapse navbar-right" id="menu">
-				<a href="" class=" btn btn-default navbar-btn">Inicio</a>
-				<a href="" class=" btn btn-default navbar-btn">Contacto</a>
-				<a href="" class=" btn btn-default navbar-btn">Motos</a>
-				<a href="" class=" btn btn-default navbar-btn">Repuestos</a>
-				<a href="" class=" btn btn-default navbar-btn">Tienda</a>
-			</div>
+			{% if user.is_authenticated %}
+				{{user.username}}
+			{% else %}
+				<div class="collapse navbar-collapse navbar-right" id="menu">
+					<a href="{% url 'social:begin' 'facebook' %}" class=" btn btn-default navbar-btn">Ingrese Con Facebook</a>
+				</div>
+			{% endif %}
 		</div>
 	</nav>
 
@@ -111,7 +110,7 @@
 
 		<div class="col-sm-9">
 			<div class="list-group">
-				{% for restaurant in restaurants %}
+				{% for restaurant ,tips in restaurants %}
 					<a href="" class="list-group-item">
 						<div class="col-sm-3">
 							<img src="{{restaurant.image}}" class="img-rounded media-object img-responsive" alt="image">
@@ -121,7 +120,7 @@
 							<p>{{restaurant.desciption}} </p>
 						</div>
 						<div class="col-sm-3 text-center">
-							<h2>5 <small>tips</small></h2>
+							<h2>{{ tips }} <small>tips</small></h2>
 							<button type="button" class="btn btn-primary btn-lg ">Ver detalles</button>
 						</div>
 					</a>
