ultima entrega 25 nov

--- a/apps/app1/templates/index.html
+++ b/apps/app1/templates/index.html
@@ -113,7 +113,8 @@
 				{% for restaurant ,tips in restaurants %}
 					<a href="" class="list-group-item">
 						<div class="col-sm-3">
-							<img src="{{restaurant.image}}" class="img-rounded media-object img-responsive" alt="image">
+							<img src="/media/{{uh
+							irestaurant.imagen.name}}" class="img-rounded media-object img-responsive" alt="image">
 						</div>
 						<div class="col-sm-6">
 							<h3>{{restaurant.name}}</h3>
