--- a/apps/app1/static/css/main.css
+++ b/apps/app1/static/css/main.css
@@ -3,11 +3,7 @@
 	padding: 0;
 }
 
-h1{
-	text-align: center;
-	font-size: 3em;
-	margin-top: 1em;
-}
+
 
 .buscador-home{
 	margin-top: 20px;
@@ -20,3 +16,11 @@ h1{
 .contenido-home{
 	margin-top: 2em;
 }
+
+.botton_user{
+	position: relative;
+	font-size: 1.5em;
+	font-weight: bold;
+
+}
+
