--- a/apps/app1/templates/index.html
+++ b/apps/app1/templates/index.html
@@ -24,7 +24,7 @@
 <body>
 	<nav class="navbar navbar-default">
 		<div class="container">
-			<div class="navbar-header">
+			<div class="navbar-header col-sm-10">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
 					<span class="sr-only">Toggle navigation</span>
 					<span class="icon-bar"></span>
@@ -33,13 +33,16 @@
 				</button>
 				<a class="navbar-brand" href="#">.::RJP-Motors::.</a>
 			</div>
-			{% if user.is_authenticated %}
-				{{user.username}}
-			{% else %}
-				<div class="collapse navbar-collapse navbar-right" id="menu">
-					<a href="{% url 'social:begin' 'facebook' %}" class=" btn btn-default navbar-btn">Ingrese Con Facebook</a>
-				</div>
-			{% endif %}
+			<div class="btn btn-info botton_user col-sm-2">
+				{% if user.is_authenticated %}
+					{{user.username}}
+				{% else %}
+					<div class="collapse navbar-collapse navbar-right" id="menu">
+						<a href="{% url 'social:begin' 'facebook' %}" class=" btn btn-default navbar-btn">Ingrese Con Facebook</a>
+					</div>
+				{% endif %}
+				
+			</div>
 		</div>
 	</nav>
 
