--- a/apps/app1/templates/detalle.html
+++ b/apps/app1/templates/detalle.html
@@ -50,7 +50,7 @@
 
 		<div class="row">
 			<div class="col-lg-4">
-				<img class=" img-responsive" src="https://pbs.twimg.com/profile_images/684875819471253505/nWOjdrZb.jpg" alt="">
+				<img class=" img-responsive" src="http://www.wpclipart.com/buildings/shop.png" alt="">
 			</div>
 			<div class="col-lg-8">
 				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi et sequi sapiente libero. Tenetur, quibusdam ipsa reprehenderit eaque fugiat soluta delectus aperiam aliquam, accusantium numquam neque obcaecati enim omnis, blanditiis.</p>
