--- a/apps/app1/templates/detalle.html
+++ b/apps/app1/templates/detalle.html
@@ -17,12 +17,42 @@
 
 	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 	<link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
-	<link rel="stylesheet" href="{% static 'css/main.css' %}">
+	<link rel="stylesheet" href="{% static 'css/detalle.css' %}">
 
 	<script src="{% static 'js/vendor/modernizr-2.8.3-respond-1.4.2.min.js' %}"></script>
+
+	<script type="text/template" id="tplDetalle">
+
+		<h2 class="page-header col-lg-12">Titulo del restaurante</h2>
+		<div class="row">
+			<div class="col-lg-4">
+				<img class=" img-responsive" src="http://www.wpclipart.com/buildings/shop.png" alt="">
+			</div>
+			<div class="col-lg-8">
+				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi et sequi sapiente libero. Tenetur, quibusdam ipsa reprehenderit eaque fugiat soluta delectus aperiam aliquam, accusantium numquam neque obcaecati enim omnis, blanditiis.</p>
+				<br />
+				<br />
+				<p>tipos de pago: asdasdas asdsdsdsd dsdsds</p>
+				<br>
+				<p>tipos de comida: asdasd asdasd adss</p>
+			</div>
+		</div>
+		<div>
+			<h4 class="page-header">Tips</h4>
+			<form action="">
+				<div class="form-group">
+				    <label for="exampleInputEmail1">Deja un Tip/Comentario.</label>
+				    <input type="text" class="form-control"  placeholder="Deje un Tip">
+				</div>
+				 <button type="submit" class="btn btn-default">Enviar</button>
+			</form>
+		</div>
+	</script>
+
+	
 </head>
 <body id="app">
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
 			<div class="navbar-header col-sm-10">
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu" aria-expanded="false">
@@ -45,34 +75,14 @@
 			</div>
 		</div>
 	</nav>
-	<section class="container">
-		<h2 class="page-header">Titulo del restaurante</h2>
-
-		<div class="row">
-			<div class="col-lg-4">
-				<img class=" img-responsive" src="http://www.wpclipart.com/buildings/shop.png" alt="">
-			</div>
-			<div class="col-lg-8">
-				<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi et sequi sapiente libero. Tenetur, quibusdam ipsa reprehenderit eaque fugiat soluta delectus aperiam aliquam, accusantium numquam neque obcaecati enim omnis, blanditiis.</p>
-				<br />
-				<br />
-				<p>tipos de pago: asdasdas asdsdsdsd dsdsds</p>
-				<br>
-				<p>tipos de comida: asdasd asdasd adss</p>
-			</div>
-		</div>
-		<div>
-			<h4 class="page-header">tips</h4>
-			<form action="">
-				<div class="form-group">
-				    <label for="exampleInputEmail1">Dejar un Tip.</label>
-				    <input type="text" class="form-control"  placeholder="Deje un Tip">
-				</div>
-				 <button type="submit" class="btn btn-default">Enviar Tip</button>
-			</form>
-		</div>
+	<section id="continer_detalle" class="container">
+		
 		
 	</section>
+	<br />
+	<br />
+	<br />
+	<br />
 
 
 
@@ -82,6 +92,8 @@
 	<script src="{% static 'js/vendor/underscore-min.js' %}"></script>
 	<script src="{% static 'js/vendor/backbone-min.js' %}"></script>
 	<script src="{% static 'js/backbone/routes/ruta.js' %}"></script>
+
+	<script src="{% static 'js/backbone/views/views.js' %}"></script>
 
 	<script src="{% static 'js/main.js' %}"></script>
 </body>
