--- a/apps/app1/templates/index.html
+++ b/apps/app1/templates/index.html
@@ -17,6 +17,7 @@
 
 	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 	<link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
+	<link rel="stylesheet" href="{% static 'css/sweetalert2.css' %}">
 
 	<script src="{% static 'js/vendor/modernizr-2.8.3-respond-1.4.2.min.js' %}"></script>
 	<link rel="stylesheet" href="{% static 'css/main.css' %}">
@@ -28,17 +29,20 @@
 		window.ciudad = -1;
 		window.categoria = -1;
 		window.pago = -1;
+		window.usuario_id = {{user.id}};
+		window.usuario = "{{user.username}}";
+
 	</script>
 
 
 	<script type="text/template" id="tplRestaurantes">
 		<div class="list-group">
 			{% for restaurant ,tips in restaurants %}
-				<a id="{{restaurant.id}}" class="list-group-item">
-					<div class="col-sm-3 div_imagen">
+				<a data-id="{{restaurant.id}}" class="list-group-item containers-restaurantes">
+					<div class="col-sm-4 div_imagen">
 						<img src="/media/{{restaurant.imagen.name}}" class="imgg_ img-rounded media-object img-responsive" alt="image">
 					</div>
-					<div class="col-sm-6">
+					<div class="col-sm-5">
 						<h3>{{restaurant.name}}</h3>
 						<p>{{restaurant.desciption}} </p>
 					</div>
@@ -50,46 +54,163 @@
 			{% endfor %}
 		</div>
 	</script>
-	
+
 
 	<script type="text/template" id="tplDetalle">
 
-		<h2 class="page-header col-lg-12"><%= todosRestaurantes.get("name") %></h2>
-		<div class="row">
+		<h2 class="page-header col-lg-12"><%= item.name %></h2>
+		<div class="row container-asd">
 			<div class="col-lg-6">
-				<img class="imagen-modal img-rounded media-object img-responsive" src="/media/<%= todosRestaurantes.get('imagen_name') %>" alt="">
+				<img class="imagen-modal img-rounded media-object img-responsive" src="/media/<%= item.imagen_name %>" alt="">
 			</div>
 			<div class="col-lg-6">
-				<p class="lead"><%= todosRestaurantes.get("desciption") %></p>
+				<p class="lead"><%= item.desciption %></p>
 				<br />
 				<br />
-				<p>Tipos de pago: <%= todosRestaurantes.payment %></p>
+				<p>Medios de pago:
+					<% item.payment.forEach(function( asd) {%>
+						 <small><%= asd.pay %>,&#32;</small>
+					<%});%>
+				</p>
+
 				<br>
-				<p>tipos de comida: asdasd asdasd adss</p>
+				<p>Categorias:
+					<% item.category.forEach(function( asd) {%>
+						 <small><%= asd.name %>,&#32;</small>
+					<%});%>
+				</p>
+
 			</div>
 		</div>
+
 		<div class="container-items-modal">
 			<h4 class="page-header subtitle-modal">Tips</h4>
-			<% todosRestaurantes.get("tip_set").forEach(function( asd) {%>
-
-				<div class="container-user "><span class="glyphicon glyphicon-user " aria-hidden="true"><%= asd.usuario %></span></div>
-				<div class="panel panel-default">
-					<div class="panel-body"><span class="container-description-modal"><%= asd.content %></span></div><br/>
-					
+			<form action="">
+				<div class="form-group col-lg-11">
+				    <label >Deja un Tip/Comentario.</label>
+				    <textarea autofocus  maxlength="200" type="text" class=" form-control textarea-modal"  placeholder="Deje un Tip"></textarea>
+				    	<div class="contador-modal">Caracteres: <span id="contador">0</span>/200</div>
+				    	
+				</div>
+					<button id="enviar-modal" type="submit" class="btn btn-info btn-lg">Enviar</button>
+			</form>
+			<% todosRestaurantes.get("tip_set").forEach(function(asd) {%>
+				<div class="container-tips">
+					<div class="container-user "><span class="glyphicon glyphicon-user " aria-hidden="true">&#32;<%= asd.usuario %></span>
+					</div>
+					<div class="">
+						<div class=""><span class="container-description-modal"><%= asd.content %></span></div><br/>
+						<% if (window.usuario === asd.usuario) { %> 
+							<div class="container col-lg-10"></div>
+							<div class="container col-log-2">
+								<a data-id="<%= asd.id %>" class="editar-tip" href="#" ><i class=" glyphicon glyphicon-pencil"></i> Editar</a>&#32;|
+								<a data-id="<%= asd.id %>" class="eliminar-tip" href="#"><i class=" glyphicon glyphicon-trash"></i> Eliminar</a>
+							</div>
+						<% } %> 
+					</div>
 				</div>
 
 			<%});%>
-			<form action="">
-				<div class="form-group">
-				    <label for="exampleInputEmail1">Deja un Tip/Comentario.</label>
-				    <input type="text" class="form-control"  placeholder="Deje un Tip">
-				</div>
-				 <button type="submit" class="btn btn-default">Enviar</button>
-			</form>
+			
 		</div>
 	</script>
 
 
+	<script type="text/template" id="tplBody">
+		<div  class="container ">
+			<div class="row ">
+				<div class="col-sm-5 ">
+					<h3 class="tu-mejor-restaurante">Encuentra el mejor restaurante</h3>  
+
+				</div>
+
+				<div class="col-sm-7 buscador-home" >
+					<div class="input-group">
+						<div class="input-group-btn">
+							<button type="button" class="btn btn-primary">Cities</button>
+							<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="city">
+								<span class="caret"></span>
+								<span class="sr-only">Elige la ciudad</span>
+							</button>
+							<ul class="dropdown-menu" role="menu" id="ciudad">
+								{% for city in cities %}
+									<li><a id="{{city.id}}" href="#">{{ city.name }}</a></li>
+								{% endfor %}
+							</ul>
+						</div>              
+						<input type="text" id="buscador-ciudades" class="form-control" placeholder="Buscar..." />
+						<div class="input-group-btn">
+							<button class="btn btn-primary" type="submit">
+								<i class="glyphicon glyphicon-search"></i>
+							</button>
+						</div>
+
+				</div>
+			</div>
+		</div>
+
+		<div class="container contenido-home">
+
+			<div class="col-sm-3 ">
+				<div class="form-group">
+					<label class="categorias" for="">Categories</label>
+					<div class="checkbox">
+							<label class="all-categories " for="{{category.id}}">
+								<input class="categoria" id="{{category.id}}" type="checkbox">Todas las categorias
+							</label>
+						</div>
+					{% for	category in categories %}
+						<div class="checkbox">
+							<label for="">
+								<input class="pago" id="{{payment.id}}" type="checkbox">{{category.name }}
+							</label>
+						</div>
+					{% endfor %}
+				</div>
+				<br />
+				<br />
+
+				<div class="form-group">
+					<label class="formas-de-pago" for="">Formas de pago</label>
+						<div class="checkbox">
+							<label class="all-categories" for="">
+								<input  type="checkbox">Todas formas de pago
+							</label>
+						</div>
+					{% for payment in payments %}
+						<div class="checkbox">
+							<label for="">
+								<input type="checkbox">{{ payment.pay }}
+							</label>
+						</div>
+					{% endfor %}
+				</div>
+			</div>
+
+			<div class="col-sm-7" id="container-restaurantes">
+				
+			</div>
+		</div>
+
+
+			<!--   MODALLLLLLL-->
+		<div data-target=".bs-example-modal-lg" class="modal fade" id="myModal" role="dialog">
+		    <div class="modal-dialog modal-lg">
+		      <!-- Modal content-->
+		      <div class="modal-content">
+		      <div id="continer-detalle">
+		      	
+		      </div>
+		        <div class="modal-footer">
+		          <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+		        </div>
+		      </div>
+		      
+		    </div>
+		  </div>
+		  
+		</div>
+	</script>
 
 
 
@@ -111,111 +232,51 @@
 				</button>
 				<a class="navbar-brand" href="#">.::RJP-Motors::.</a>
 			</div>
-			<div class="btn btn-primary botton_user col-sm-2">
 				{% if user.is_authenticated %}
-					{{user.username}}
-				{% else %}
-					<div class="collapse navbar-collapse navbar-right" id="menu">
-						<a href="{% url 'social:begin' 'facebook' %}" class=" btn btn-default ">Ingrese Con Facebook</a>
+					<div class="btn btn-primary botton_user col-sm-2">
+						{{user.username}}
 					</div>
+				{% else %}
+					<div class="btn btn-primary botton_user col-sm-2">
+						<a href="{% url 'social:begin' 'facebook' %}" class="link-inicio-sesion"><h5>Ingrese Con Facebook</h5></a>
+					
+					</div>
+
 				{% endif %}
 				
-			</div>
 		</div>
 	</nav>
 
-	<div class="container">
-		<div class="row ">
-			<div class="col-sm-6 ">
-				<h3 class="tu-mejor-restaurante">Encuentra tu mejor restaurante</h3>  
 
-			</div>
+	<!-- Contenido de la página  -->
+	<div  id="container-body" class="container">
+		
+	</div >
 
-			<div class="col-sm-6 buscador-home" >
-				<div class="input-group">
-					<div class="input-group-btn">
-						<button type="button" class="btn btn-primary">Cities</button>
-						<button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="city">
-							<span class="caret"></span>
-							<span class="sr-only">Elige la ciudad</span>
-						</button>
-						<ul class="dropdown-menu" role="menu" id="ciudad">
-							{% for city in cities %}
-								<li><a id="{{city.id}}" href="#">{{ city.name }}</a></li>
-							{% endfor %}
-						</ul>
-					</div>              
-					<input type="text" id="buscador-ciudades" class="form-control" placeholder="Encuentre lo que busca" />
-				</div>
 
-			</div>
+	<!-- FOOTER-->
+	<footer class="pie-de-pagina container">
+		<div class="col-lg-2">
+			<h4>Subtítulo</h4>
+			<a  href="#"><small class=" items-footer">asdasdasd</small></a>
+			<a  href="#"><small class=" items-footer">asdasdasd</small></a>
+			<a  href="#"><small class=" items-footer">asdasdasd</small></a>
+			<a  href="#"><small class=" items-footer">asdasdasd</small></a>
+			<address>asdasd#26-12</address>
 		</div>
-	</div>
-
-	<div class="container contenido-home">
-
-		<div class="col-sm-3 ">
-			<div class="form-group">
-				<label class="categorias" for="">Categories</label>
-				<div class="checkbox">
-						<label class="all-categories " for="">
-							<input class="categoria" id="{{category.id}}" type="checkbox">Todas las categorias
-						</label>
-					</div>
-				{% for	category in categories %}
-					<div class="checkbox">
-						<label for="">
-							<input class="pago" id="{{payment.id}}" type="checkbox">{{ category.name }}
-						</label>
-					</div>
-				{% endfor %}
-			</div>
-			<br />
-			<br />
-
-			<div class="form-group">
-				<label class="formas-de-pago" for="">Formas de pago</label>
-					<div class="checkbox">
-						<label class="all-categories" for="">
-							<input  type="checkbox">Todas formas de pago
-						</label>
-					</div>
-				{% for payment in payments %}
-					<div class="checkbox">
-						<label for="">
-							<input type="checkbox">{{ payment.pay }}
-						</label>
-					</div>
-				{% endfor %}
-			</div>
+		<div class="col-lg-2">
+			<h4>Subtítulo</h4>
+			<a class=" items-footer" href="#"><small>asdasdasd</small></a>
+			<a class=" items-footer" href="#"><small>asdasdasd</small></a>
+			<a class=" items-footer" href="#"><small>asdasdasd</small></a>
+			<a class=" items-footer" href="#"><small>asdasdasd</small></a>
+			<address>asdasd#26-12</address>
 		</div>
 
-		<div class="col-sm-9" id="container-restaurantes">
-			
-		</div>
-	</div>
 
 
-		<!--   MODALLLLLLL-->
 
-	<div data-target=".bs-example-modal-lg" class="modal fade" id="myModal" role="dialog">
-	    <div class="modal-dialog modal-lg">
-	    
-	      <!-- Modal content-->
-	      <div class="modal-content">
-	      <div id="continer-detalle">
-	      	
-	      </div>
-	        <div class="modal-footer">
-	          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-	        </div>
-	      </div>
-	      
-	    </div>
-	  </div>
-	  
-	</div>
-
+	</footer>
 
 
 
@@ -227,13 +288,15 @@
 	<script src="{% static 'js/vendor/bootstrap.min.js' %}"></script>
 	<script src="{% static 'js/vendor/underscore-min.js' %}"></script>
 	<script src="{% static 'js/vendor/backbone-min.js' %}"></script>
-
+	<script src="{% static 'js/vendor/sweetalert2.js' %}"></script>
+	
 
 
 	<script src="{% static 'js/backbone/models/models.js' %}"></script>
 	<script src="{% static 'js/backbone/routes/ruta.js' %}"></script>
 	<script src="{% static 'js/backbone/collections/collections.js' %}"></script>
 	<script src="{% static 'js/backbone/views/views.js' %}"></script>
+	<script src="{% static 'js/permisos.js' %}"></script>
 	<script src="{% static 'js/main.js' %}"></script>
 
 
