ya se pueden eliminar tips

--- a/apps/app1/templates/index.html
+++ b/apps/app1/templates/index.html
@@ -31,6 +31,8 @@
 		window.pago = -1;
 		window.usuario_id = {{user.id}};
 		window.usuario = "{{user.username}}";
+		window.cadena = "";
+
 
 	</script>
 
