--- a/apps/app1/templates/index.html
+++ b/apps/app1/templates/index.html
@@ -18,6 +18,13 @@
 	<link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 	<link rel="stylesheet" href="{% static 'css/bootstrap-theme.min.css' %}">
 	<link rel="stylesheet" href="{% static 'css/sweetalert2.css' %}">
+	<link rel="stylesheet" href="{% static 'css/footer-distributed-with-address-and-phones.css' %}">
+
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+	<link href="http://fonts.googleapis.com/css?family=Cookie" rel="stylesheet" type="text/css">
+
+
+	
 
 	<script src="{% static 'js/vendor/modernizr-2.8.3-respond-1.4.2.min.js' %}"></script>
 	<link rel="stylesheet" href="{% static 'css/main.css' %}">
@@ -45,8 +52,8 @@
 						<img src="/media/{{restaurant.imagen.name}}" class="imgg_ img-rounded media-object img-responsive" alt="image">
 					</div>
 					<div class="col-sm-5">
-						<h3>{{restaurant.name}}</h3>
-						<p>{{restaurant.desciption}} </p>
+						<center><h3>{{restaurant.name}}</h3>
+						<p>{{restaurant.desciption}} </p></center>
 					</div>
 					<div class="col-sm-3 text-center">
 						<h2>{{ tips }} <small>tips</small></h2>
@@ -215,13 +222,89 @@
 	</script>
 
 
+	<!-- FOOTER-->
+	<script type="text/template" id="tplFooter">
+		<div class="footer-left">
+
+			<h3>Company<span>logo</span></h3>
+
+			<p class="footer-links">
+				<a href="#">Home</a>
+				·
+				<a href="#">Blog</a>
+				·
+				<a href="#">Pricing</a>
+				·
+				<a href="#">About</a>
+				·
+				<a href="#">Faq</a>
+				·
+				<a href="#">Contact</a>
+			</p>
+
+			<p class="footer-company-name">Company Name &copy; 2015</p>
+		</div>
+
+		<div class="footer-center">
+
+			<div>
+				<i class="fa fa-map-marker"></i>
+				<p><span>21 Revolution Street</span> Paris, France</p>
+			</div>
+
+			<div>
+				<i class="fa fa-phone"></i>
+				<p>+1 555 123456</p>
+			</div>
+
+			<div>
+				<i class="fa fa-envelope"></i>
+				<p><a href="mailto:support@company.com">support@company.com</a></p>
+			</div>
+
+		</div>
+
+		<div class="footer-right">
+
+			<p class="footer-company-about">
+				<span>About the company</span>
+				Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet.
+			</p>
+
+			<div class="footer-icons">
+
+				<a href="#"><i class="fa fa-facebook"></i></a>
+				<a href="#"><i class="fa fa-twitter"></i></a>
+				<a href="#"><i class="fa fa-linkedin"></i></a>
+				<a href="#"><i class="fa fa-github"></i></a>
+
+			</div>
+
+		</div>
+	</script>
 
 
 
 </head>
 
 
-
+<!--||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||-->
+<!--||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||-->
+<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00||||||||||||||||||||||||||||||||||||||||||-->
+<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00||||||||||||||||00||||||||||||||||||||||||||-->
+<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00|||||||||||||||00|||||||||||||||||||||||||||-->
+<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00||||||||||||||00|||||||||||||||||||||||||||||-->
+<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00|||||||||||||00||||||||||||||||||||||||||||||-->
+<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00|||||||||||00||||||||||||||||||||||||||||||||-->
+<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00|||||||||||00||||||||||||||||||||||||||||||||-->
+<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00|||||||||||00||||||||||||||||||||||||||||||||-->
+<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00|||||||||||00||||||||||||||||||||||||||||||||-->
+<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00|||||||||||00||||||||||||||||||||||||||||||||-->
+<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00|||||||||||00||||||||||||||||||||||||||||||||-->
+<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00|||||||||||00||||||||||||||||||||||||||||||||-->
+<!--||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||-->
+<!--||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||-->
+<!--||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||-->
 <body>
 	<nav class="navbar navbar-default navbar-fixed-top">
 		<div class="container">
@@ -257,27 +340,8 @@
 
 
 	<!-- FOOTER-->
-	<footer class="pie-de-pagina container">
-		<div class="col-lg-2">
-			<h4>Subtítulo</h4>
-			<a  href="#"><small class=" items-footer">asdasdasd</small></a>
-			<a  href="#"><small class=" items-footer">asdasdasd</small></a>
-			<a  href="#"><small class=" items-footer">asdasdasd</small></a>
-			<a  href="#"><small class=" items-footer">asdasdasd</small></a>
-			<address>asdasd#26-12</address>
-		</div>
-		<div class="col-lg-2">
-			<h4>Subtítulo</h4>
-			<a class=" items-footer" href="#"><small>asdasdasd</small></a>
-			<a class=" items-footer" href="#"><small>asdasdasd</small></a>
-			<a class=" items-footer" href="#"><small>asdasdasd</small></a>
-			<a class=" items-footer" href="#"><small>asdasdasd</small></a>
-			<address>asdasd#26-12</address>
-		</div>
-
-
-
-
+	<footer id="container-pie-de-pagina" class="footer-distributed">
+		
 	</footer>
 
 
