Preparandome para organizar un poco el código

--- a/apps/app1/templates/index.html
+++ b/apps/app1/templates/index.html
@@ -45,23 +45,22 @@
 
 
 	<script type="text/template" id="tplRestaurantes">
-		<div class="list-group">
-			{% for restaurant ,tips in restaurants %}
-				<a data-id="{{restaurant.id}}" class="list-group-item containers-restaurantes">
+			<div class="list-group">
+				<a data-id="restaurant.id" class="list-group-item containers-restaurantes">
 					<div class="col-sm-4 div_imagen">
-						<img src="/media/{{restaurant.imagen.name}}" class="imgg_ img-rounded media-object img-responsive" alt="image">
+						<img src="<%= '/media/' + restaurant.imagen_name %>" class="imgg_ img-rounded media-object img-responsive" alt="image">
 					</div>
 					<div class="col-sm-5">
-						<center><h3>{{restaurant.name}}</h3>
-						<p>{{restaurant.desciption}} </p></center>
+						<center><h3><%= restaurant.name%></h3>
+						<p><%= restaurant.desciption%> </p></center>
 					</div>
 					<div class="col-sm-3 text-center">
-						<h2>{{ tips }} <small>tips</small></h2>
+						<h2><%= restaurant.tip_set.length %>&#32;<small>tips</small></h2>
 					</div>
-					<button type="button" data-id="{{restaurant.id}}" class="btn btn-lg btn-primary restaurantes" >Ver Detalle </button>
+					<button type="button" data-id="<%= restaurant.id %>" class="btn btn-lg btn-primary restaurantes" >Ver Detalle </button>
 				</a>
-			{% endfor %}
-		</div>
+			</div>
+
 	</script>
 
 
@@ -237,8 +236,6 @@
 				·
 				<a href="#">About</a>
 				·
-				<a href="#">Faq</a>
-				·
 				<a href="#">Contact</a>
 			</p>
 
@@ -290,19 +287,19 @@
 
 <!--||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||-->
 <!--||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||-->
-<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00||||||||||||||||||||||||||||||||||||||||||-->
-<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00||||||||||||||||00||||||||||||||||||||||||||-->
-<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00|||||||||||||||00|||||||||||||||||||||||||||-->
-<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00||||||||||||||00|||||||||||||||||||||||||||||-->
-<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00|||||||||||||00||||||||||||||||||||||||||||||-->
-<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00|||||||||||00||||||||||||||||||||||||||||||||-->
-<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00|||||||||||00||||||||||||||||||||||||||||||||-->
-<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00|||||||||||00||||||||||||||||||||||||||||||||-->
-<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00|||||||||||00||||||||||||||||||||||||||||||||-->
-<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00|||||||||||00||||||||||||||||||||||||||||||||-->
-<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00|||||||||||00||||||||||||||||||||||||||||||||-->
-<!--||||||||||||||||00||||||||||||||||||||||||||||||||||||00|||||||||||00||||||||||||||||||||||||||||||||-->
-<!--||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||-->
+<!--||||||||||||||||000000000|||||||||||||||||||||||||||||||||||00||||||||||||||||||||||||||||||||||-->
+<!--||||||||||||||||00|||||||0|||||||||||||||||||||||||||||00||||||||||||||||00|||||||||||||||||||||-->
+<!--||||||||||||||||00||||||||0||||||||||||||||||||||||||||00|||||||||||||||00||||||||||||||||||||||-->
+<!--||||||||||||||||00||||||||0|||||||||||||||||||||||||||00||||||||||||||00||||||||||||||||||||||||-->
+<!--||||||||||||||||00||||||||0||||||||||||||||||||||||||||00|||||||||||||00||||||||||||||||||||||||-->
+<!--||||||||||||||||000000000|||||||||||||||||||||||||||||00|||||||||||00|||||||||||||||||||||||||||-->
+<!--||||||||||||||||000000000||||||||||||||||||||||||||||||00|||||||||||00|||||||||||||||||||||||||||-->
+<!--||||||||||||||||00       0|||||||||||||||||||||||||||||00|||||||||||00||||||||||||||||||||||||||-->
+<!--||||||||||||||||00        0|||||||||||||||||||||||||||||00|||||||||||00|||||||||||||||||||||||||||-->
+<!--||||||||||||||||00        0||||||||||||||||||||||||||||00|||||||||||00|||||||||||||||||||||||||||-->
+<!--||||||||||||||||00||||||||0||||||||||||||||||||||||||||00|||||||||||00|||||||||||||||||||||||||||-->
+<!--||||||||||||||||00|||||||0|||||||||||||||||||||||||||||00|||||||||||00|||||||||||||||||||||||||||-->
+<!--||||||||||||||||000000000||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||-->
 <!--||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||-->
 <!--||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||-->
 <body>
@@ -318,9 +315,9 @@
 				<a class="navbar-brand" href="#">.::RJP-Motors::.</a>
 			</div>
 				{% if user.is_authenticated %}
-					<div class="btn btn-primary botton_user col-sm-2">
-						{{user.username}}
-					</div>
+						<div class="btn btn-primary botton_user col-sm-2">
+							{{user.username}}
+						</div>
 				{% else %}
 					<div class="btn btn-primary botton_user col-sm-2">
 						<a href="{% url 'social:begin' 'facebook' %}" class="link-inicio-sesion"><h5>Ingrese Con Facebook</h5></a>
