--- a/apps/app1/static/css/main.css
+++ b/apps/app1/static/css/main.css
@@ -23,7 +23,7 @@ body{
 	position: relative;
 	font-size: 1.5em;
 	font-weight: bold;
-
+	margin-top: 1em;
 }
 
 .categorias, .formas-de-pago, .tu-mejor-restaurante{
@@ -33,9 +33,18 @@ body{
 }
 
 .navbar{
-	padding: 5px 0;
+	height: 80px;
 }
-
+.navbar-brand{
+	font: normal 3.5em 'Cookie', cursive;
+}
+.navbar-nav {
+	color: #FFF;
+}
+.navbar-nav li a{
+	height: 80px;
+	font-size: 2.5em;
+}
 
 .imagen-modal{
 	margin-left: 1em;
